--- a/app/views/search/_profile_search.html.haml
+++ b/app/views/search/_profile_search.html.haml
@@ -1,10 +1,27 @@
 %li.has-hover.search-item-box{id: "#{profile.id}"}
   = link_to image_tag(profile.avatar.url(:small), class: "item-img", title: "#{profile.name}"), show_profile_path(profile.username)
+  -# .pait-btn
+  -#   - if user_signed_in?
+  -#     = link_to new_pair_path(navigator_id: profile.id), :class => "btn btn-itunes", :type => "button", "data-target" => "#pairModal", "data-toggle" => "modal", "data-navigator-name" => "#{profile.first_name}", "data-navigator_id" => "#{profile.id}", :remote => true do
+  -#       %span.ion-code-working
+  -#       PAIR
+
   .pait-btn
-    - if user_signed_in?
-      = link_to new_pair_path(navigator_id: profile.id), :class => "btn btn-itunes", :type => "button", "data-target" => "#pairModal", "data-toggle" => "modal", "data-navigator-name" => "#{profile.first_name}", "data-navigator_id" => "#{profile.id}", :remote => true do
-        %span.ion-code-working
-        PAIR
+    - if profile.user.identities.any?
+      = link_to "https://www.facebook.com/#{profile.user.identities.first.uid}", :class => "btn btn-facebook", target: "_blank" do
+        %span.ion-social-facebook
+
+    - if profile.github.present?
+      = link_to "#{profile.github}", :class => "btn btn-github", target: "_blank" do
+        %span.ion-social-github
+
+    - if profile.twitter.present?
+      = link_to "#{profile.twitter}", :class => "btn btn-twitter", target: "_blank" do
+        %span.ion-social-twitter
+
+    - if profile.googleplus.present?
+      = link_to "#{profile.googleplus}", :class => "btn btn-googleplus", target: "_blank" do
+        %span.ion-social-googleplus
 
   .info
     .name
