--- a/app/views/layouts/_navigation_search.html.haml
+++ b/app/views/layouts/_navigation_search.html.haml
@@ -1,7 +1,7 @@
 #search-controls
   = form_tag(search_path, method: 'get', class: 'form-inline') do
     .form-group
-      = text_field_tag :skill_search, params[:skill_search] , class: "form-control", placeholder: 'ruby, go, python'
+      = text_field_tag :skill_search, params[:skill_search], class: "form-control", placeholder: 'ruby, go, python'
       = text_field_tag :location_address,params[:location_address] , class: "form-control"
       %button.search-btn.btn.btn-gray{:type => "submit"}
         %i.ion-search
@@ -18,24 +18,24 @@
 
 
   $('#skill_search').selectize({
+      plugins: ['remove_button'],
+      delimiter: ',',
+      persist: false,
       valueField: 'name',
       labelField: 'name',
       searchField: 'name',
       options: [],
-      create: false,
+      create: true,
       render: {
           option: function(item, escape) {
-              console.log(item);
               var actors = [];
-              for (var i = 0, n = item.autocompletes.length; i < n; i++) {
+              for (var i = 0, n = item.length; i < n; i++) {
                   actors.push('<span>' + escape(item.autocompletes[i].name) + '</span>');
               }
 
               return '<div>' +
-                      '<span class="name">' +
-                          '<span class="name">' + escape(item.name) + '</span>' +
-                      '</span>' +
-                    '</div>';
+                        '<span class="name">' + escape(item.name) + '</span>' +
+                     '</div>';
           }
       },
       load: function(query, callback) {
