--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -77,6 +77,11 @@ ul.ui-autocomplete {
   margin: 10px 20px 10px 0;
 }
 
+#edit-map{
+  width: 600px;
+  height: 400px;
+}
+
 #multiple li {
   cursor: pointer;
   text-decoration: underline;
