edit search layout and setting

--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -37,8 +37,6 @@
   background-color: #F8F8F8;
 }
 
-
-
 .profile-head{
   position: relative;
   top: -80px;
@@ -114,4 +112,12 @@
   margin-left: -20px;
   margin-top: 10;
   padding-top: 0;
+}
+
+//edit profile page
+
+.tab-content{
+  background-color: #fff;
+  padding: 5px;
+  padding-top: 20px;
 }
