--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -130,7 +130,8 @@ ul.ui-autocomplete {
   .ion-code,
   .ion-code-working,
   .ion-close,
-  .ion-edit{
+  .ion-edit,
+  .ion-log-out{
     margin:auto;
     text-align:center;
     vertical-align:middle;
@@ -140,9 +141,13 @@ ul.ui-autocomplete {
   .ion-android-notifications{
     color:$red;
   }
-
+  .ion-navigate{
+    font-size: 30px;
+    padding-right: 3px;
+    padding-left: 3px;
+  }
   .ion-search{
-    font-size: 15px;
+    font-size: 20px;
   }
   .search-btn{
     max-height: 34px;
@@ -151,9 +156,7 @@ ul.ui-autocomplete {
   #skill_search{
     max-width: 150px;
   }
-  #location_address{
-    max-width: 200px;
-  }
+
 }
 
 .nav-line{
@@ -169,30 +172,45 @@ ul.ui-autocomplete {
 }
 
 .selectize-control{
-  min-width: 200px;
-
+  margin: 0px;
   display: inline-block;
   .selectize-input, .item, input{
     display: inline-block;
   }
+
   .selectize-input {
-    height: 20px;
-    max-width: 300px;
     overflow: hidden;
   }
-  .selectize-input input {
-      height: 20px;
-      max-width: 300px;
-      overflow: hidden;
-    }
-}
-
-#location_address{
-  margin-bottom: 5px;
 }
 
 .ion-social-github,
 .ion-social-twitter,
 .ion-social-googleplus{
   font-size: 19px;
+}
+
+.ion-navicon-round{
+  font-size: 20px;
+}
+
+.navbar-collapse.collapse {
+  display: block!important;
+}
+
+.navbar-nav>li, .navbar-nav {
+  float: left !important;
+}
+
+.navbar-nav.navbar-right:last-child {
+  margin-right: -15px !important;
+}
+
+.navbar-right {
+  float: right!important;
+  max-height: 51px;
+  margin: 0px;
+}
+
+.panel{
+  margin-top: 40px;
 }
