--- a/app/views/layouts/_navigation_signin_links.html.haml
+++ b/app/views/layouts/_navigation_signin_links.html.haml
@@ -3,30 +3,10 @@
     = current_user.profile.first_name
     = image_tag(current_user.profile.avatar.url(:thumb), class: "navbar-profile-img")
 
--# / pair notifications
--# - if current_user.profile.navigats.where(done: false) || current_user.profile.drives.where(done: false)
--#   %li.nav-line{:role => "presentation", "data-placement" => "bottom", "data-toggle" => "tooltip", :title => "Pair Requests"}
--#     %a{:href => "#{pairs_path}"}
--#       %span.ion-code-working
--# - else
--#   %li.nav-line{:role => "presentation", "data-placement" => "bottom", "data-toggle" => "tooltip", :title => "Pair Requests"}
--#     %a{:href => "#{pairs_path}"}
--#       %span.ion-code
--#
--# / activite notifications
--# %li.nav-line{:role => "presentation", "data-placement" => "bottom", "data-toggle" => "tooltip", :title => "Notifications"}
--#   %a{:href => "#"}
--#     %span.ion-android-notifications-none
-
-/ %li.nav-line{:role => "presentation", "data-toggle" => "tooltip", :title => "Notifications"}
-/   %a{:href => "#"}
-/     %span.ion-android-notifications
-
-/ setting notifications
-%li.dropdown.nav-line{:role => "presentation", "data-placement" => "bottom", "data-toggle" => "tooltip", :title => "Settings"}
-  %a.dropdown-toggle{"aria-expanded" => "false", "data-toggle" => "dropdown", :href => "#", :role => "button"}
+%li.nav-line{"data-placement" => "bottom", "data-toggle" => "tooltip", :title => "Settings"}
+  %a{:href => "#{edit_profiles_path}"}
     %span.ion-android-settings
-  %ul.dropdown-menu{:role => "menu"}
-    %li= link_to 'Edit account', edit_user_registration_path
-    %li= link_to 'Edit profile', edit_profiles_path
-    %li= link_to 'Sign out', destroy_user_session_path, :method=>'get'
+
+%li.nav-line{"data-placement" => "bottom", "data-toggle" => "tooltip", :title => "SignOut"}
+  %a{:href => "#{destroy_user_session_path}"}
+    %span.ion-log-out
