--- a/app/views/layouts/_setting_nav.html.haml
+++ b/app/views/layouts/_setting_nav.html.haml
@@ -5,4 +5,4 @@
       %li= link_to 'Profile', edit_profiles_path
       %li= link_to 'Account settings', edit_user_registration_path
       %li= link_to 'Edit skills', "#skills"
-      %li= link_to 'Edit address', "#address"
+      %li= link_to 'Edit address', address_profiles_path
