--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -1,3 +1,4 @@
+- title "Edir Profile"
 .row
   .col-md-3
     = render 'layouts/setting_nav'
@@ -9,5 +10,3 @@
       = render 'layouts/messages'
       .panel-body#panel-body
         = render 'edit_form'
-
-:scss
