--- a/app/assets/stylesheets/search_box.scss
+++ b/app/assets/stylesheets/search_box.scss
@@ -53,9 +53,24 @@
 
   .pait-btn{
     // position: absolute;
-    margin-right: 10px;
-    margin-top: 5px;
+    margin-right: 5px;
+    margin-top: 13px;
     float: right;
+    max-width: 85px;
+    .btn{
+      min-width: 40px;
+      min-height: 40px;
+      max-width: 40px;
+      max-height: 40px;
+      margin-bottom: 4px;
+      padding: 0;
+      span{
+        display:table;
+        margin:0 auto;
+        margin-top: 2px;
+        font-size: 25px;
+      }
+    }
     a{
       padding-top: 1px;
       padding-bottom: 0px;
