--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,9 @@
 !!!
 %html{"ng-app" => "app"}
   %head
-    %title= "#{content_for?(:title) ? yield(:title) : 'Rails Devise'} - GEEKHUB.IO"
+    = display_meta_tags site: 'GEEKHUB', reverse: true,
+                        keywords: %w[geek pair programming map],
+                        description: "Find geeks around you"
     = include_gon
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
     %script{:src => "https://maps.googleapis.com/maps/api/js?sensor=false&libraries=places"}
@@ -10,6 +12,6 @@
 
   %body
     %main{:role => "main"}
-      = render 'layouts/navigation' unless current_page?(signup_path)
-      = render 'layouts/messages' unless current_page?(root_path)
+      -unless current_page?(signup_path) || current_page?(new_user_session_path)
+        = render 'layouts/navigation'
       = yield
