--- a/app/views/profiles/_new_form.html.haml
+++ b/app/views/profiles/_new_form.html.haml
@@ -1,4 +1,6 @@
-= simple_form_for(@profile, validate: true, html: { multipart: true, class: "form-horizontal" }) do |f|
+- title "Sign up"
+  
+= simple_form_for(@profile, validate: true, html: { multipart: true}) do |f|
   %a.btn.btn-lg.btn-block.btn-facebook-inversed{:href => "/users/auth/facebook"}
     %i.ion-social-facebook
     Sign Up with Facebook
