--- a/app/views/search/_form.html.haml
+++ b/app/views/search/_form.html.haml
@@ -1,11 +1,15 @@
 #search-controls
+  - if params[:qlocation] == nil && user_signed_in?
+    - params[:qlocation] = current_user.profile.address
+
   = form_tag(search_path, method: 'get') do
     .input-group
-      = text_field_tag :qlocation,params[:qlocation] , class: "form-control input-lg"
-      %a.input-group-addon.ion-navigate{:href => "#"}
+      = text_field_tag :qlocation, params[:qlocation], class: "form-control input-lg"
+      %span.input-group-addon.ion-navigate{id: "gps"}
     = text_field_tag :qskill, params[:qskill], id: "qskill", class: "form-control", placeholder: 'ruby, go, python'
-    = text_field_tag :qdomain,params[:qdomain] , class: "form-control"
-    = text_field_tag :qedu,params[:qedu] , class: "form-control"
+
+    = select_tag :qdomain, options_for_select(@domains, params[:qdomain]), class: "form-control"
+    = text_field_tag :qedu,params[:qedu] , class: "form-control", placeholder: "University"
 
     %button.search-btn.btn.btn-gray.btn-lg.btn-block{:type => "submit"}
       %i.ion-search
@@ -13,6 +17,8 @@
 .map-cont.hidden-xs
   #search-map
 :javascript
+
+  $('#qdomain').selectize();
 
   $("#qlocation").geocomplete({
     details: "form",
