create skills setting by cocoon gem

--- a/app/views/profiles/_edit_form.html.haml
+++ b/app/views/profiles/_edit_form.html.haml
@@ -21,12 +21,12 @@
     = f.input :first_name, required: true
     = f.input :last_name
     = f.input :job_title
-    = f.input :phone, required: true, :input_html => { class:"form-control" }
+    = f.input :phone, :input_html => { class:"form-control" }
     = f.input :age, required: true, as: :string, class:"form-control"
 
     = f.input :domain_id, collection: @domains, class:"form-control", label: "Area of expertise"
 
-    = f.input :languages, class:"form-control", label: "lang"
+    = f.input :languages, class:"form-control", label: "Language"
 
     = f.input :university, input_html: { class: "form-control" }
     = f.input :bio
@@ -41,7 +41,6 @@
   var data = #{ Language.all.map{|l| [l.native_name, l.id]}.to_json };
   var profile = #{ @profie.to_json }
   var langs = data.map(function(x) { return { id: x[1], name: x[0] }; });
-  console.log(langs);
 
   $("#profile_address").geocomplete({
     details: "form",
