--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -1,8 +1,7 @@
-- title "Edir Profile"
+- title "Edit Profile"
 .row
   .col-md-3
     = render 'layouts/setting_nav'
-
 
   .col-md-9
     .panel.panel-default
