--- a/app/views/layouts/_setting_nav.html.haml
+++ b/app/views/layouts/_setting_nav.html.haml
@@ -4,5 +4,6 @@
     %ul.nav
       %li= link_to 'Profile', edit_profiles_path
       %li= link_to 'Account settings', edit_user_registration_path
-      %li= link_to 'Edit skills', "#skills"
+      %li= link_to 'Edit skills', skills_profiles_path
       %li= link_to 'Edit address', address_profiles_path
+      %li= link_to 'Edit linked accounts', linked_accounts_profiles_path
