--- a/app/views/profiles/_profile_skill_fields.html.haml
+++ b/app/views/profiles/_profile_skill_fields.html.haml
@@ -5,3 +5,44 @@
     = f.input :description, as: :text
     = f.input :primary, as: :boolean
     = link_to_remove_association "Remove Skill", f, class: "btn btn-itunes-inversed"
+    %hr
+
+
+:javascript
+
+  $('[id$=skill_name]').selectize({
+    maxItems: 1,
+    valueField: 'name',
+    labelField: 'name',
+    searchField: 'name',
+    create: true,
+    render: {
+      option: function(item, escape) {
+        var actors = [];
+        for (var i = 0, n = item.length; i < n; i++) {
+          actors.push('<span>' + escape(item.autocompletes[i].name) + '</span>');
+        }
+
+        return '<div>' +
+                  '<span class="name">' + escape(item.name) + '</span>' +
+               '</div>';
+      }
+    },
+    load: function(query, callback) {
+      if (!query.length) return callback();
+      $.ajax({
+        url: '/autocompletes/skill.json',
+        type: 'GET',
+        dataType: 'json',
+        data: {
+          q: query,
+        },
+        error: function() {
+          callback();
+        },
+        success: function(res) {
+          callback(res.autocompletes);
+        }
+      });
+    }
+  });
