--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -26,7 +26,7 @@
       /       %p 104
     .profile-image-box
       .image_wrapper
-        = image_tag @profile.avatar.url(:medium), class: "profile_img"
+        = image_tag @profile.avatar.url(:original), class: "profile_img"
 #profile-main
   / .col-md-2.box
   .col-md-10.col-md-offset-1.box#profile-content
