--- a/app/assets/stylesheets/search_box.scss
+++ b/app/assets/stylesheets/search_box.scss
@@ -63,6 +63,8 @@
       max-width: 40px;
       max-height: 40px;
       margin-bottom: 4px;
+      margin-bottom: 4px;
+
       padding: 0;
       span{
         display:table;
