--- a/app/views/after_signup/confirm_address.html.haml
+++ b/app/views/after_signup/confirm_address.html.haml
@@ -1,17 +1,14 @@
 - title "Edit Address"
 
 .row
-  .col-md-3
-    = render 'layouts/setting_nav'
-
-  .col-md-9
+  .col-md-6.col-md-offset-3
     .panel.panel-default
       .panel-heading Address
       = render 'layouts/messages'
       .panel-body#panel-body
         #address-map
 
-        = simple_form_for(@profile) do |f|
+        = simple_form_for(@profile, url: wizard_path, method: :put) do |f|
           = f.error_notification
           .form-inputs
             %label Address
@@ -33,7 +30,7 @@
   }
 
 :javascript
-  var profile = #{profile.to_json};
+  var profile = #{@profile.to_json};
 
   $("#profile_address").geocomplete();
 
