--- a/app/views/after_signup/confirm_skills.html.haml
+++ b/app/views/after_signup/confirm_skills.html.haml
@@ -1,27 +1,24 @@
 - title "Edit Linked Accounts"
 
 .row
-  .col-md-3
-    = render 'layouts/setting_nav'
-
-  .col-md-9
+  .col-md-6.col-md-offset-3
     .panel.panel-default
       .panel-heading Skills
       = render 'layouts/messages'
       .panel-body#panel-body
-        = simple_form_for(@profile) do |f|
+        = simple_form_for(@profile, url: wizard_path, method: :put) do |f|
           = f.error_notification
           .form-inputs
             #tags
-              .form-actions
-                = f.button :submit, "Update", class: "btn btn-itunes-inversed btn-lg btn-block"
-                %br
+
+              %br
               = link_to_add_association 'Add New Skill', f, :profile_skills, class: "btn btn-block btn-itunes-inversed"
               %br
 
               = f.simple_fields_for :profile_skills do |skill|
-                = render 'profile_skill_fields', f: skill
-
+                = render 'profiles/profile_skill_fields', f: skill
+              .form-actions
+                = f.button :submit, "Update", class: "btn btn-itunes-inversed btn-lg btn-block"
 
 :javascript
 
