--- a/app/views/search/_form.html.haml
+++ b/app/views/search/_form.html.haml
@@ -7,14 +7,15 @@
       = text_field_tag :qlocation, params[:qlocation], class: "form-control input-lg"
       %span.input-group-btn
         %button.btn.btn-default.btn-lg.ion-navigate{id: "gps", :type => "button"}
-    = text_field_tag :qskill, params[:qskill], id: "qskill", class: "form-control", placeholder: 'ruby, go, python'
+    = text_field_tag :qskills, params[:qskills], id: "qskill", class: "form-control", placeholder: 'ruby, go, python'
 
-    = select_tag :qdomain, options_for_select(@domains, params[:qdomain]), class: "form-control"
+    = select_tag :qdomain, options_from_collection_for_select(@domains, 'id', 'name', params[:qdomain]), class: "form-control", include_blank: true, placeholder: 'domain'
     = text_field_tag :qedu,params[:qedu] , class: "form-control", placeholder: "University"
 
     %button.search-btn.btn.btn-gray.btn-lg.btn-block{:type => "submit"}
       %i.ion-search
       SEARCH
+
 .map-cont.hidden-xs
   #search-map
 :javascript
