--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -19,7 +19,7 @@
     %p= @profile.user.email
     %br
     %b Bio:
-    %p= markdown(@profile.bio)
+    %p= @profile.bio
     %br
     %b Address:
     %address= @profile.address
