--- a/app/views/after_signup/confirm_profile.html.haml
+++ b/app/views/after_signup/confirm_profile.html.haml
@@ -33,7 +33,7 @@
             = f.input :domain_id, collection: @domains, class:"form-control", label: "Area of expertise"
 
             = f.input :university, input_html: { class: "form-control" }
-            = f.input :bio, hint:"Markdown supported"
+            = f.input :bio
             = f.input :gender, label: 'What is your gender?', collection: [ ['Male', true ], ['Female', false] ], as: :radio_buttons
 
             .form-actions
