--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -148,3 +148,20 @@ blockquote {
 .quote-true{
   background: #e2f1e0;
 }
+
+.linked_accounts{
+  .btn{
+    min-width: 40px;
+    min-height: 40px;
+    max-width: 40px;
+    max-height: 40px;
+    margin-bottom: 4px;
+    padding: 0;
+    span{
+      display:table;
+      margin:0 auto;
+      margin-top: 2px;
+      font-size: 25px;
+    }
+  }
+}
