--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
     %script{:src => "https://maps.googleapis.com/maps/api/js?sensor=false&libraries=places"}
     = javascript_include_tag 'application'
     = csrf_meta_tags
-
+    = analytics_init if Rails.env.production?
   %body
     %main{:role => "main"}
       = render 'layouts/navigation' unless @hide_navbar
