--- a/app/views/profiles/_edit_form.html.haml
+++ b/app/views/profiles/_edit_form.html.haml
@@ -21,6 +21,9 @@
     = f.input :first_name, required: true
     = f.input :last_name
     = f.input :job_title
+    = f.input :job_company
+    = f.input :job_details, as: :text
+
     = f.input :phone, :input_html => { class:"form-control" }
     = f.input :age, required: true, class:"form-control"
 
