--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -15,19 +15,58 @@
   .col-md-10.col-md-offset-1.box
     %h3 About
     %hr
-    %b Email:
-    %p= @profile.user.email
-    %br
+    %b Age:
+    %p= "#{Date.today.strftime("%Y").to_i - @profile.age.to_i} years old."
+    %b Gender:
+    %p= @profile.gender ? "Male" : "Female"
     %b Bio:
     %p= @profile.bio
-    %br
-    %b Address:
-    %address= @profile.address
-    %br
 .row
   .col-md-10.col-md-offset-1.box
-    %h3 Skills
+    %h3 Work and Education
     %hr
+    %b University:
+    %p= @profile.university
+    %b Job Title:
+    %p= @profile.job_title
+    %b Company:
+    %p= @profile.job_company
+    %b Job Details:
+    %p= @profile.job_details
+.row
+  .col-md-10.col-md-offset-1.box
+    %h3 Contact information
+    %hr
+    %b Email:
+    %p= @profile.user.email
+    %b Phone:
+    %p= @profile.phone
+    %b Address:
+    %address= @profile.address
+    %b Linked Accounts:
+    .linked_accounts
+      - if @profile.facebook.present?
+        = link_to "#{@profile.facebook}", :class => "btn btn-facebook", target: "_blank" do
+          %span.ion-social-facebook
+
+      - if @profile.github.present?
+        = link_to "#{@profile.github}", :class => "btn btn-github", target: "_blank" do
+          %span.ion-social-github
+
+      - if @profile.twitter.present?
+        = link_to "#{@profile.twitter}", :class => "btn btn-twitter", target: "_blank" do
+          %span.ion-social-twitter
+
+      - if @profile.linkedin.present?
+        = link_to "#{@profile.linkedin}", :class => "btn btn-linkedin", target: "_blank" do
+          %span.ion-social-linkedin
+
+.row
+  .col-md-10.col-md-offset-1.box
+    %h3 Skills & Expertises
+    %hr
+    %b Domain:
+    %p= Domain.find(@profile.domain_id).name
     - @profile.profile_skills.order(primary: :desc).each do |s|
       %blockquote{class: "quote-#{s.primary.to_s}"}
         .skill-name
