--- a/app/views/profiles/_edit_form.html.haml
+++ b/app/views/profiles/_edit_form.html.haml
@@ -25,7 +25,7 @@
     = f.input :job_details, as: :text
 
     = f.input :phone, :input_html => { class:"form-control" }
-    = f.input :age, required: true, class:"form-control"
+    = f.input :age, required: true, class:"form-control", label: "Year of birth"
 
     = f.input :domain_id, collection: @domains, class:"form-control", label: "Area of expertise"
 
