--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -65,8 +65,8 @@
   .col-md-10.col-md-offset-1.box
     %h3 Skills & Expertises
     %hr
-    %b Domain:
-    %p= Domain.find(@profile.domain_id).name
+    %b Domain (Area of expertise):
+    %p=  @profile.domain.name
     - @profile.profile_skills.order(primary: :desc).each do |s|
       %blockquote{class: "quote-#{s.primary.to_s}"}
         .skill-name
