--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -66,7 +66,7 @@
     %h3 Skills & Expertises
     %hr
     %b Domain (Area of expertise):
-    %p=  @profile.domain.name
+    %p= @profile.domain.name if @profile.domain.present?
     - @profile.profile_skills.order(primary: :desc).each do |s|
       %blockquote{class: "quote-#{s.primary.to_s}"}
         .skill-name
